--- a/.config/dmenu/Makefile
+++ b/.config/dmenu/Makefile
@@ -34,7 +34,7 @@ clean:
 dist: clean
 	mkdir -p dmenu-$(VERSION)
 	cp LICENSE Makefile README arg.h config.def.h config.mk dmenu.1\
-		drw.h util.h dmenu_drun dmenu_run dmenu_wrun dmenu_fbrun dmenu_themes stest.1 $(SRC)\
+		drw.h util.h dmenu_drun dmenu_run dmenu_wrun dmenu_fbrun dmenu_themes dmenu_cmd stest.1 $(SRC)\
 		dmenu-$(VERSION)
 	tar -cf dmenu-$(VERSION).tar dmenu-$(VERSION)
 	gzip dmenu-$(VERSION).tar
@@ -42,13 +42,14 @@ dist: clean
 
 install: all
 	mkdir -p $(DESTDIR)$(PREFIX)/bin
-	cp -f dmenu dmenu_drun dmenu_run dmenu_wrun dmenu_fbrun dmenu_themes stest $(DESTDIR)$(PREFIX)/bin
+	mkdir -p /usr/share/fonts/truetype/ubuntumono/
 	chmod 755 $(DESTDIR)$(PREFIX)/bin/dmenu
 	chmod 755 $(DESTDIR)$(PREFIX)/bin/dmenu_drun
 	chmod 755 $(DESTDIR)$(PREFIX)/bin/dmenu_run
 	chmod 755 $(DESTDIR)$(PREFIX)/bin/dmenu_wrun
 	chmod 755 $(DESTDIR)$(PREFIX)/bin/dmenu_fbrun
 	chmod 755 $(DESTDIR)$(PREFIX)/bin/dmenu_themes
+	chmod 755 $(DESTDIR)$(PREFIX)/bin/dmenu_cmd
 	chmod 755 $(DESTDIR)$(PREFIX)/bin/stest
 	mkdir -p $(DESTDIR)$(MANPREFIX)/man1
 	sed "s/VERSION/$(VERSION)/g" < dmenu.1 > $(DESTDIR)$(MANPREFIX)/man1/dmenu.1
@@ -63,6 +64,7 @@ uninstall:
 		$(DESTDIR)$(PREFIX)/bin/dmenu_wrun\
 		$(DESTDIR)$(PREFIX)/bin/dmenu_fbrun\
 		$(DESTDIR)$(PREFIX)/bin/dmenu_themes\
+		$(DESTDIR)$(PREFIX)/bin/dmenu_cmd\
 		$(DESTDIR)$(PREFIX)/bin/stest\
 		$(DESTDIR)$(MANPREFIX)/man1/dmenu.1\
 		$(DESTDIR)$(MANPREFIX)/man1/stest.1
